2008-02-24  Quentin Mathe <qmathe@club-internet.fr>

	* NSMatrix.m (-drawRect:): Fixed unknown selector crash when a matrix 
	is used. -_drawCellAtRow: has been made a public method in GNUstep.

2007-08-19  Guenther Noack <guenther@unix-ag.uni-kl.de>

	* Narcissus.theme: Added.

2007-08-19  Guenther Noack <guenther@unix-ag.uni-kl.de>

	* GSToolbar.[mh]: Toolbar themeability support (color gradients)
	* NSColor.[mh]: Added a couple of colors
	* NSWindow.[mh]: Very minor code cleanups, overwriting -[NSWindow
	  backgroundColor] and a method in the window decoration view,
	  which is unfortunately a small hack. :(
	
2007-05-02  Yen-Ju Chen <yjchen gmail>
	
	* Reduce number of warning. Hope not break anything.
	* Last fix for now. The rest is mostly private methods in GNUstep.

2007-04-05  Quentin Mathe <qmathe@club-internet.fr>

	Fix for bug #8611 (see EtoileWildMenus too)
	* NSMenuItemCell.m (-drawInteriorWithFrame:inView:): Updated to be a bit 
	more in sync with GNUstep svn by taking code that asks separator items to
	draw themselves. This method is now called even when EtoileWildMenus is 
	loaded.

2007-03-29  Quentin Mathe <qmathe@club-internet.fr>

	First part of a fix to get rid of bordered button drawing visible in menu
	item cells with recent GNUstep svn.
	* NSButtonCell.m:
	(-drawWithFrame:inView:): Modified to partially match latest changes in 
	GNUstep svn. Moved border drawing in 
	_drawBorderAndBackgroundWithFrame:inView:.
	(_drawBorderAndBackgroundWithFrame:inView:): New method that can be 
	overriden in subclass or category like WildMenus NSMenuItemCell one.
	* NSMenuItemCell.m (_drawBorderAndBackgroundWithFrame:inView:): New method
	to match latest GNUstep svn implementation.
	Also added some logging statements for debugging.

2007-03-18  Yen-Ju Chen <yjchenx at gmail>

	* Put Nesedah.theme in resources as default theme.

2007-02-18  Yen-Ju Chen <yjchenx at gmail>

	* Make README in reStructured format.
