@@ -1,5 +1,14 @@
 2008-02-24  Quentin Mathe <qmathe@club-internet.fr>
 
+	Fixed the flickering of window background color with Nesedah theme. This bug 
+	was introduced with Narcissus support.
+	* NSWindow.m 
+	(-backgroundColorWithImageNamed:): Added new method that handles undefined
+	window background colors gracefully.
+	(-backgroundColor:): Modified to call the new method.
+
+2008-02-24  Quentin Mathe <qmathe@club-internet.fr>
+
 	* NSMatrix.m (-drawRect:): Fixed unknown selector crash when a matrix 
 	is used. -_drawCellAtRow: has been made a public method in GNUstep.
 
